fix width not responsive on mobile

--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -46,8 +46,18 @@ hr {
 
 @media only screen and (max-width: 600px) {
     section > p {
-        line-height: 40px;
-        padding: 30px 50px;
+        line-height: 30px;
+        padding: 10px 20px;
+    }
+
+    .About > h1 {
+        margin-top: 10px;
+    }
+
+    .About {
+        text-align: center;
+        margin: auto;
+        width: 80vw;
     }
   }
 
